[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/assets/StatueEnemySprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/StatueEnemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/instance/save_state_node.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/delete_save_state.gd" type="Script" id=4]
[ext_resource path="res://scenes/instance/NotePlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/instance/health_bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/instance/statueSwitch.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/corruptableStatueSwitch.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.1068, 16.6376 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 88.1465
height = 298.11

[node name="StatueEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.98582, -18.5326 )
shape = SubResource( 1 )

[node name="save_state_node" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="NotePlayer" parent="." instance=ExtResource( 5 )]
volume_db = -4.968

[node name="health_bar" parent="." instance=ExtResource( 6 )]
position = Vector2( -58.8044, -161.764 )

[node name="attack_area" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="attack_area"]
position = Vector2( -26.4866, -4.23788 )
shape = SubResource( 2 )

[node name="statueSwitch" parent="." instance=ExtResource( 7 )]
script = ExtResource( 8 )
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="completed_dialog" from="statueSwitch" to="." method="_on_statueSwitch_completed_dialog"]
